# myjson

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  MyJSON.md  README.md  json.c  json.cpp  myjson.c  myjson.cpp  myjson.h  myjson.hpp  pretyjson.c  pretyjson.cpp
cmake/: MyjsonConfig.cmake.in  pkg-config.pc.in
examples/: example_usage.cpp  example_usages.cpp
include/myjson/: myjson.hpp
json/: abasic.json  alevel.json  awitho.json  myjson.cpp  myjson.hpp  myjson.json  obasic.json  olevel.json  owitha.json  test.json  test_array.json  test_objects.json
samples/: CMakeLists.txt
src/: myjson.cpp
tests/: CMakeLists.txt  test_file_io.cpp  test_function.cpp  test_jsons.cpp  test_methods.cpp  test_myjson.cpp  test_operators.cpp  test_read_file.cpp  test_write_file.cpp
